--- a/meetmeserver/src/main/webapp/immediatelyInfos.html
+++ b/meetmeserver/src/main/webapp/immediatelyInfos.html
@@ -133,7 +133,7 @@
         window.location.assign("Waiting.html");
     }
 
-    var accountName = localStorage.getItem("accountName").toString();
+    var accountName = localStorage.getItem("advisorName").toString();
     var src = "";
     var name = "";
     var lastname = "";
