--- a/meetmeserver/src/main/webapp/index.html
+++ b/meetmeserver/src/main/webapp/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="img/symbol.png">
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel="icon" href="img/symbol.png"/>
 <title>Virtual Lobby</title>
 
 <!-- Bootstrap -->
-<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/bootstrap.css"/>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" id="hallo">
   <div class="container"> 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -38,43 +38,43 @@
 </nav>
 
 <section>
-  <div class="container special">
+  <div class="container special" >
     <div class="row text-center">
       <div class="col-xs-4 col-xs-offset-1">
-        <div class="jumbotron text-center"  onClick="showAppointmentType('hwee')">
+        <div class="jumbotron text-center" id="Leng Toh Heng"  onClick="showAppointmentType('hwee')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/Hwee-Leng-Toh-Heng.jpg"/>
-          <t class="text lead">Ms. Hwee Leng Toh-Heng</t><br>
+          <t class="text lead">Ms. Hwee Leng Toh-Heng</t><br/>
          <t class="text small">Learning Advisor</t>
         </div>
       </div>
       <div class="col-xs-4 col-xs-offset-1">
-        <div class="jumbotron text-center" onClick="showAppointmentType('nimrod')">
+        <div class="jumbotron text-center" id="Delante" onClick="showAppointmentType('nimrod')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/n_delante.jpg"/>
-          <t class="text lead">Mr. Nimrod Delante</t><br>
+          <t class="text lead">Mr. Nimrod Delante</t><br/>
           <t class="text small">Learning Advisor</t>
         </div>
       </div>
     </div>
     
     <div class="row">
-      <div class="col-xs-4">
-        <div class="jumbotron text-center" onClick="showAppointmentType('nicolas')"> <img class="img-responsive img-rounded center-block" src="img/Nicolas-Greliche.jpg"/>
-        <t class="text lead">Dr. Nicolas Greliche</t><br>
+      <div class="col-xs-4" >
+        <div class="jumbotron text-center" id="Greliche" onClick="showAppointmentType('nicolas')"> <img class="img-responsive img-rounded center-block" src="img/Nicolas-Greliche.jpg"/>
+        <t class="text lead">Dr. Nicolas Greliche</t><br/>
          <t class="text small">Learning Advisor</t>
         </div>
       </div>
       <div class="col-xs-4"> 
-      <div class="jumbotron text-center" onClick="showAppointmentType('george')">
+      <div class="jumbotron text-center" id="Jacobs" onClick="showAppointmentType('george')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/George-Jacobs.jpg"/>
-          <t class="text lead">Dr. George Jacobs</t><br>
+          <t class="text lead">Dr. George Jacobs</t><br/>
           <t class="text small">Learning Advisor</t>
         </div>
       </div>
     
       <div class="col-xs-4">
-        <div class="jumbotron text-center" onClick="showAppointmentType('michael')">
+        <div class="jumbotron text-center" id="Joyce" onClick="showAppointmentType('michael')">
         <img class="img-responsive img-rounded center-block" style="max-height:244px;" src="img/Michael-Joyce.jpg"/>
-          <t class="text lead">Mr. Michael James Joyce</t><br>
+          <t class="text lead">Mr. Michael James Joyce</t><br/>
           <t class="text small">Teacher, Learning Advisor</t>
         </div>
       </div>
@@ -93,12 +93,12 @@
 </footer>
 <script src="VirtualLobby/js/jquery-1.11.2.min.js"></script> 
 <script src="VirtualLobby/js/bootstrap.min.js"></script>
+<script>
+  function showAppointmentType(name) {
+    localStorage.setItem("advisorName", name);
+    window.location.assign("appointmentType.html");
+  }
+</script>
 </body>
 </html>
 
-<script>
-function showAppointmentType(name) {
-  localStorage.setItem("advisorName", name);
-    window.location.assign("appointmentType.html");
-}
-</script>
