--- a/meetmeserver/src/main/webapp/showAppointments.html
+++ b/meetmeserver/src/main/webapp/showAppointments.html
@@ -146,6 +146,7 @@
                 <input type="radio" name="message" value="message4" id="message4" onclick="hidePersonalMessage();"><label onclick="hidePersonalMessage();"for="message4">&nbsp;The student should make an appointment</label><br>
                 <input type="radio" name="message" value="message5" id="message5" onclick="showPersonalMessage();"><label onclick="showPersonalMessage();" for="message5" >&nbsp;Personal message</label><br>
                 <textarea class="form-control hidden" name="personalMessage" rows="5" id="personalMessage" placeholder="Please enter your personal message"></textarea>
+                <input type="text" class="form-control hidden" id="hiddenFieldLecturer" name="lecturerName">
             </div>
         </div>
 
@@ -208,7 +209,51 @@
       function hidePersonalMessage() {
           $("#personalMessage").addClass('hidden');
       };
-	
+
+      var accountName = localStorage.getItem("advisorName").toString();
+      var src = "";
+      var name = "";
+      var lastname = "";
+
+      switch(accountName) {
+          case "george":
+              src = "img/George-Jacobs.jpg";
+              name ="George Jacobs";
+              lastname="Jacobs";
+              break;
+          case "hwee":
+              src = "img/Hwee-Leng-Toh-Heng.jpg";
+              name ="Hwee Leng Toh Heng";
+              lastname="Leng Toh Heng"
+              break;
+          case "nimrod":
+              src = "img/n_delante.jpg";
+              name ="Nimrod Delante";
+              lastname="Delante";
+              break;
+          case "michael":
+              src = "img/Michael-Joyce.jpg";
+              name ="Michael Joyce";
+              lastname = "Joyce";
+              break;
+          case "nicolas":
+              src = "img/Nicolas-Greliche.jpg";
+              name ="Nicolas Greliche";
+              lastname="Greliche";
+              break;
+          case "tang":
+              src = "img/Tang-Chun-Meng.jpg";
+              name ="Tang Chun Meng";
+              lastname="Chun Meng";
+              break;
+          default:
+              src = "img/400x400.gif";
+              name="Unknown"
+      }
+
+      document.getElementById("hiddenFieldLecturer").value = lastname;
+
+
     </script>
 </body>
 </html>
