--- a/meetmeserver/src/main/webapp/showAppointments.html
+++ b/meetmeserver/src/main/webapp/showAppointments.html
@@ -254,7 +254,7 @@
       document.getElementById("hiddenFieldLecturer").value = lastname;
 
     function checkForm(){
-        if(document.getElementById("personalMessage").value == null)
+        if(document.getElementById("personalMessage").value == "")
         {
             document.getElementById("personalMessage").value = "test";
         }
