--- a/meetmeserver/src/main/webapp/appointmentSuccess.html
+++ b/meetmeserver/src/main/webapp/appointmentSuccess.html
@@ -74,7 +74,7 @@
 
 <script>
   $( document ).ready(function() {
-    $("#message").html("Thank you for contacting Learning Support.<br> " + capitalizeFirstLetter(localStorage.getItem("advisorName").toString()) + " will contact you as soon as possible.");
+    $("#message").html("Thank you for contacting Learning Support. <br> " + capitalizeFirstLetter(localStorage.getItem("advisorName").toString()) + "&nbsp will contact you as soon as possible.");
 
   });
 
