--- a/meetmeserver/src/main/webapp/showAppointments.html
+++ b/meetmeserver/src/main/webapp/showAppointments.html
@@ -102,11 +102,11 @@
 
     <div class="col-sm-2 col-sm-offset-1">
 
-        <label>Student Name: </label><span id ="studentName"></span>
+        <label>Student Name: Peter</label><span id ="studentName"></span>
         <br>
-        <label>Course: </label><span id="course"> N/A</span>
+        <label>Course: CP3003</label><span id="course"></span>
         <br>
-        <label>Issue Category: </label><span id="topic"></span>
+        <label>Issue Category: Other</label><span id="topic"></span>
     </div>
     <div class="col-sm-6 col-sm-offset-1">
       <div class="row">
@@ -164,16 +164,10 @@
 </div>
     </div>
     </form>
+
 <hr>
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>Copyright © DEB - Deutsche Entwicklerbude. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
+
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.2.min.js"></script>
