--- a/meetmeserver/src/main/webapp/urgentAppReplyDecline.html
+++ b/meetmeserver/src/main/webapp/urgentAppReplyDecline.html
@@ -77,12 +77,12 @@
 
   var intervalClient = new XMLHttpRequest();
   $( document ).ready(function() {
-    $("#message").html("Thank you for contacting Learning Support.<br> " + capitalizeFirstLetter(localStorage.getItem("advisorName").toString()) + "declined your request.");
+    $("#message").html("Thank you for contacting Learning Support.<br> " + capitalizeFirstLetter(localStorage.getItem("advisorName").toString()) + " declined your request.");
 
-    intervalClient.open("GET", '/api/notification/AppReply/' + lastname);
+    intervalClient.open("GET", 'api/notification/AppReply/Greliche');
     intervalClient.onreadystatechange = function() {
-      if (this.readyState === this.DONE) {
-        $("#additionalMessag").html(intervalClient.responseText);
+      if (this.readyState == this.DONE) {
+        document.getElementById("additionalMessag").innerHTML = this.response.toString();
       }
     };
     intervalClient.send();
@@ -93,30 +93,46 @@
     return string.charAt(0).toUpperCase() + string.slice(1);
   };
 
-  var advisorName = localStorage.getItem("advisorName").toString();
+  var accountName = localStorage.getItem("accountName").toString();
   var src = "";
+  var name = "";
+  var lastname = "";
+  var sent = false;
 
-  switch(advisorName) {
+  switch(accountName) {
     case "george":
       src = "img/George-Jacobs.jpg";
+      name ="George Jacobs";
+      lastname="Jacobs";
       break;
     case "hwee":
       src = "img/Hwee-Leng-Toh-Heng.jpg";
+      name ="Hwee Leng Toh Heng";
+      lastname="Leng Toh Heng"
       break;
     case "nimrod":
       src = "img/n_delante.jpg";
+      name ="Nimrod Delante";
+      lastname="Delante";
       break;
     case "michael":
       src = "img/Michael-Joyce.jpg";
+      name ="Michael Joyce";
+      lastname = "Joyce";
       break;
     case "nicolas":
       src = "img/Nicolas-Greliche.jpg";
+      name ="Nicolas Greliche";
+      lastname="Greliche";
       break;
     case "tang":
       src = "img/Tang-Chun-Meng.jpg";
+      name ="Tang Chun Meng";
+      lastname="Chun Meng";
       break;
     default:
-    src = "img/400x400.gif";
+      src = "img/400x400.gif";
+      name="Unknown"
   }
   document.getElementById("advisorImage").src=src;
 </script>
